// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-sign-in spec: Render logic -> should render a \`sign in\` form by default 1`] = `
<amplify-sign-in>
  <mock:shadow-root>
    <amplify-form-section headertext="Sign in to your account" testdataprefix="sign-in">
      <amplify-federated-buttons></amplify-federated-buttons>
      <amplify-auth-fields></amplify-auth-fields>
      <div class="sign-in-form-footer" slot="amplify-form-section-footer">
        <span>
          No account?
          <amplify-link data-test="sign-in-create-account-link">
            Create account
          </amplify-link>
        </span>
        <amplify-button data-test="sign-in-sign-in-button" type="submit">
          <amplify-loading-spinner style="display: none;"></amplify-loading-spinner>
          <span style="display: initial;">
            Sign In
          </span>
        </amplify-button>
      </div>
    </amplify-form-section>
  </mock:shadow-root>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withEmptyFederatedObject 1`] = `
<amplify-sign-in>
  <mock:shadow-root>
    <amplify-form-section headertext="Sign in to your account" testdataprefix="sign-in">
      <amplify-federated-buttons></amplify-federated-buttons>
      <amplify-auth-fields></amplify-auth-fields>
      <div class="sign-in-form-footer" slot="amplify-form-section-footer">
        <span>
          No account?
          <amplify-link data-test="sign-in-create-account-link">
            Create account
          </amplify-link>
        </span>
        <amplify-button data-test="sign-in-sign-in-button" type="submit">
          <amplify-loading-spinner style="display: none;"></amplify-loading-spinner>
          <span style="display: initial;">
            Sign In
          </span>
        </amplify-button>
      </div>
    </amplify-form-section>
  </mock:shadow-root>
</amplify-sign-in>
`;

exports[`amplify-sign-in spec: amplify-sign-in stories stories withFederated 1`] = `
<amplify-sign-in>
  <mock:shadow-root>
    <amplify-form-section headertext="Sign in to your account" testdataprefix="sign-in">
      <amplify-federated-buttons></amplify-federated-buttons>
      <amplify-strike>
        or
      </amplify-strike>
      <amplify-auth-fields></amplify-auth-fields>
      <div class="sign-in-form-footer" slot="amplify-form-section-footer">
        <span>
          No account?
          <amplify-link data-test="sign-in-create-account-link">
            Create account
          </amplify-link>
        </span>
        <amplify-button data-test="sign-in-sign-in-button" type="submit">
          <amplify-loading-spinner style="display: none;"></amplify-loading-spinner>
          <span style="display: initial;">
            Sign In
          </span>
        </amplify-button>
      </div>
    </amplify-form-section>
  </mock:shadow-root>
</amplify-sign-in>
`;
